<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/Amt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:layout_marginLeft="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/editAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:layout_marginLeft="16dp"
        android:id="@+id/Pax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pax"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/editPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">




        <ToggleButton
            android:id="@+id/SVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:checked="true"
            android:textOff="@string/noSVS"
            android:textOn="@string/haveSVS" />


        <ToggleButton
            android:id="@+id/Gst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:checked="true"
            android:textOff="@string/noGST"
            android:textOn="@string/haveGST" />

    </LinearLayout>


    <TextView
        android:layout_marginLeft="16dp"
        android:id="@+id/Disc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/editDisc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/TB" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/EachP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/EP" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <Button
            android:layout_marginLeft="16dp"
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SS" />

        <Button
            android:layout_marginRight="16dp"

            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/r" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />
</LinearLayout>
